--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,13 +33,11 @@ android {
     }
 
     flavorDimensions "default"
+    productFlavors {
 
-    productFlavors{
-
-        free{
+        free {
             applicationId "com.udacity.gradle.builditbigger.free"
         }
-
 
         paid {
             applicationId "com.udacity.gradle.builditbigger.paid"
@@ -49,11 +47,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-v4:26.1.0'
     endpointsServer project(path: ':backend', configuration: 'endpoints')
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.http-client:google-http-client-android:1.23.0'
+    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation ('com.google.api-client:google-api-client:1.23.0'){
+        exclude module: 'httpclient'
+    }
+    implementation ('com.google.http-client:google-http-client-android:1.23.0'){
+        exclude module: 'httpclient'
+    }
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
